--- a/.github/workflows/fps-submissions-checks.yml
+++ b/.github/workflows/fps-submissions-checks.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Install prettier
         run: npm install -g prettier
       - name: Run prettier check
-      - run: npm prettier --check pull-request/first_party_sets.JSON
+        run: npm prettier --check pull-request/first_party_sets.JSON
       - name: Update file if prettier check fails
         if: ${{failure()}}
         run: cat "Prettier check failed" > results.txt
