--- a/.github/workflows/fps-submissions-checks.yml
+++ b/.github/workflows/fps-submissions-checks.yml
@@ -39,9 +39,9 @@ jobs:
         with: 
             node-version: 16
       - name: Install prettier
-        run: npm install -g prettier
+        run: npx install -g prettier
       - name: Run prettier check
-        run: npm prettier --check pull-request/first_party_sets.JSON
+        run: npx prettier --check pull-request/first_party_sets.JSON
       - name: Update file if prettier check fails
         if: ${{failure()}}
         run: cat "Prettier check failed" > results.txt
