--- a/.github/workflows/fps-submissions-checks.yml
+++ b/.github/workflows/fps-submissions-checks.yml
@@ -39,9 +39,9 @@ jobs:
         with: 
             node-version: 16
       - name: Install prettier
-        run: npm install -global prettier
+        run: yarn add --dev --exact prettier
       - name: Run prettier check
-        run: npm prettier --check '**/*.JSON'
+        run: yarn prettier --check
       - name: Update file if prettier check fails
         if: ${{failure()}}
         run: cat "Prettier check failed" > results.txt
