--- a/.github/workflows/fps-submissions-checks.yml
+++ b/.github/workflows/fps-submissions-checks.yml
@@ -39,7 +39,10 @@ jobs:
         with: 
             node-version: 16
       - name: Install prettier
-        run: yarn add --dev --exact prettier
+        run: npm install --save-dev --save-exact prettier
+      - name: print path
+        run: echo $PATH
+        shell: bash 
       - name: Run prettier check
         run: yarn prettier --check
       - name: Update file if prettier check fails
