--- a/.github/workflows/fps-submissions-checks.yml
+++ b/.github/workflows/fps-submissions-checks.yml
@@ -47,7 +47,8 @@ jobs:
         run: echo $PATH
         shell: bash 
       - name: Run prettier check 
-        run: npm prettier "**/pull-request/**/*.JSON" --check
+        run: prettier "**/pull-request/**/*.JSON" --check
+        shell: bash
       - name: Update file if prettier check fails
         if: ${{failure()}}
         run: cat "Prettier check failed" > results.txt
