--- a/.github/workflows/fps-submissions-checks.yml
+++ b/.github/workflows/fps-submissions-checks.yml
@@ -47,7 +47,7 @@ jobs:
         run: echo $PATH
         shell: bash 
       - name: Run prettier check 
-        run: prettier "**/first_party_sets.JSON" --check
+        run: prettier "**/first_party_sets.JSON" --check >> results.txt
         shell: bash
       - name: Read the result
         id: read_results
