--- a/.github/workflows/fps-submissions-checks.yml
+++ b/.github/workflows/fps-submissions-checks.yml
@@ -48,8 +48,11 @@ jobs:
         shell: bash 
       - name: Run prettier check 
         continue-on-error: true
-        run: prettier "**/first_party_sets.JSON" --check >> results.txt
+        run: prettier "**/first_party_sets.JSON" --check 
         shell: bash
+      - name: Prettier fail check
+        if: ${{ failure() }}
+        run: echo 'Prettier check failed' | cat - result.txt > temp && mv temp result.txt
       - name: Read the result
         id: read_results
         uses: andstor/file-reader-action@v1
