--- a/.github/workflows/fps-submissions-checks.yml
+++ b/.github/workflows/fps-submissions-checks.yml
@@ -43,7 +43,9 @@ jobs:
       - name: Run prettier check 
         continue-on-error: true
         shell: bash
-        run: if prettier "**/first_party_sets.JSON" --check | grep -q "unformatted"; then  "Prettier check failed, run prettier and try again." >> results.txt fi
+        run: if prettier "**/first_party_sets.JSON" --check | grep -q "unformatted"; then
+         echo "Prettier check failed." | >> results.txt
+         fi
       - name: Read the result
         id: read_results
         uses: andstor/file-reader-action@v1
