--- a/.github/workflows/fps-submissions-checks.yml
+++ b/.github/workflows/fps-submissions-checks.yml
@@ -43,9 +43,8 @@ jobs:
       - name: Run prettier check 
         continue-on-error: true
         shell: bash
-        run: if prettier "**/first_party_sets.JSON" --check | grep -q "unformatted"; then
-         echo "Prettier check failed." | >> results.txt
-         fi
+      - run: output=$(prettier "**/first_party_sets.JSON" --check)
+      - run: echo "$output" | tee -a your_file.txt  
       - name: Read the result
         id: read_results
         uses: andstor/file-reader-action@v1
