--- a/.github/workflows/fps-submissions-checks.yml
+++ b/.github/workflows/fps-submissions-checks.yml
@@ -43,7 +43,9 @@ jobs:
       - name: Run prettier check 
         continue-on-error: true
         shell: bash
-        run: echo prettier "**/first_party_sets.JSON" --check
+        run: output=$(prettier "**/first_party_sets.JSON" --check)
+      - name: Check prettier results
+        run: echo "$output"
       - name: Read the result
         id: read_results
         uses: andstor/file-reader-action@v1
