--- a/.github/workflows/fps-submissions-checks.yml
+++ b/.github/workflows/fps-submissions-checks.yml
@@ -43,7 +43,11 @@ jobs:
       - name: Run prettier check 
         continue-on-error: true
         shell: bash
-        run: output=$(prettier "**/first_party_sets.JSON" --check)
+        run: |
+         output=$(prettier "**/first_party_sets.JSON" --check)
+         if [[ $(echo "$output" | grep -q "Unformatted"| grep -q "unformatted") ]]; then
+         sed -i '1s/^/$output\n/' results.txt
+         fi
       - name: Check prettier results
         run: echo "$output"
       - name: Read the result
