--- a/.github/workflows/fps-submissions-checks.yml
+++ b/.github/workflows/fps-submissions-checks.yml
@@ -46,9 +46,11 @@ jobs:
         run: |
          output=$(prettier "**/first_party_sets.JSON" --check)
          if [[ $(echo "$output" | grep -q "Run Prettier to fix") ]]; then
-         echo "prettier check failed"
-         sed -i "1s/^/$output\n/" results.txt
-         exit 0
+         echo "prettier check failed file bing created"
+         touch prettierOutput.txt
+         Soutput >> prettierOutput.txt
+         else
+         echo "prettier check passed"
          fi
       - name: Read the result
         id: read_results
