--- a/.github/workflows/fps-submissions-checks.yml
+++ b/.github/workflows/fps-submissions-checks.yml
@@ -41,16 +41,17 @@ jobs:
       - name: Install prettier
         run: npm install --global prettier
       - name: Run prettier check 
+        id: prettier_check
         continue-on-error: true
         shell: bash
         run: |
          output=$(prettier "**/first_party_sets.JSON" --check)
-         if [[ $(echo "$output" | grep -q "Run Prettier to fix") ]]; then
-         echo "prettier check failed file being created"
-         touch prettierOutput.txt
-         $output >> prettierOutput.txt
+         if echo "$output" | grep -q "Run Prettier to fix"; then 
+           echo "Prettier check failed"
+           echo "prettier_output=$output" >> $GITHUB_OUTPUT 
          else
-         echo "prettier check passed"
+           echo "Prettier check passed"
+           echo "prettier_output=success" >> $GITHUB_OUTPUT 
          fi
       - name: Read the result
         id: read_results
@@ -65,9 +66,14 @@ jobs:
         if: steps.read_results.outputs.contents != 'success'
         run: |
          echo "It appears you have failed some tests. Here are your results:" > message.txt
-         cat results.txt >> message.txt      
+         cat results.txt >> message.txt   
+      - name: Add Prettier Results to Comment
+        if: steps.prettier_check.outputs.prettier_output != 'success'
+        run: |
+         echo "It appears you have failed the prettier check. Here are your results:" > message.txt
+         cat  steps.prettier_check.outputs.prettier_output >> message.txt 
       - name: Comment if sucess
-        if: steps.read_results.outputs.contents == 'success'
+        if: steps.read_results.outputs.contents == 'success' && steps.prettier_check.outputs.prettier_output == 'success'
         run: echo "Looks like you've passed all of the checks!" >> message.txt
       - name: Write Comment on PR
         uses: mshick/add-pr-comment@v2
@@ -75,7 +81,7 @@ jobs:
           message-path: "message.txt" 
           refresh-message-position: true
       - name: Fail or Succeed
-        if: steps.read_results.outputs.contents != 'success'
+        if: steps.read_results.outputs.contents != 'success' || steps.prettier_check.outputs.prettier_output != 'success'
         uses: actions/github-script@v3
         with:
           script: |
