--- a/.github/workflows/fps-submissions-checks.yml
+++ b/.github/workflows/fps-submissions-checks.yml
@@ -48,11 +48,13 @@ jobs:
          output=$(prettier "**/first_party_sets.JSON" --check)
          if echo "$output" | grep -q "Run Prettier to fix"; then 
            echo "Prettier action check failed"
+           echo $output
            echo "prettier_result=$output" >> $GITHUB_ENV
-           echo "$output" >> $GITHUB_OUTPUT 
+           echo $output >> $GITHUB_OUTPUT 
          else
            echo "Prettier action check passed"
            echo "success"
+           echo $output
            echo "prettier_result=success" >> $GITHUB_ENV
          fi
       - name: Read the result
@@ -73,8 +75,8 @@ jobs:
         if: steps.prettier_check.outputs.prettier_output != 'success'
         run: |
          echo "It appears you have failed the prettier check. Here are your results:" >> message.txt
-         echo "$prettier_result"
-         echo "$prettier_result" >> message.txt 
+         echo $prettier_result
+         echo $prettier_result >> message.txt 
       - name: Comment if sucess
         if: steps.read_results.outputs.contents == 'success' && steps.prettier_check.outputs.prettier_output == 'success'
         run: echo "Looks like you've passed all of the checks!" >> message.txt
