--- a/.github/workflows/fps-submissions-checks.yml
+++ b/.github/workflows/fps-submissions-checks.yml
@@ -33,11 +33,6 @@ jobs:
       - name: Content check
         id: check
         run: python3 main/check_sites.py -i pull-request/first_party_sets.JSON --data_directory=main --with_diff > results.txt
-     # - name: Prettier Env Setup
-     #   uses: actions/checkout@v3
-     # - uses: actions/setup-node@v3
-     #   with: 
-     #       node-version: 16
       - name: Install prettier
         run: npm install --global prettier
       - name: Run prettier check 
@@ -75,8 +70,11 @@ jobs:
         if: steps.prettier_check.outputs.prettier_output != 'success'
         run: |
          echo "It appears you have failed the prettier check. Here are your results:" >> message.txt
-         echo $prettier_result
-         echo $prettier_result >> message.txt 
+         echo "$prettier_result"
+         echo "$prettier_result" >> message.txt
+         echo "Using output"
+         echo ${{ steps.prettier_check.outputs.prettier_output }}
+         echo ${{ steps.prettier_check.outputs.prettier_output }} >> message.txt
       - name: Comment if sucess
         if: steps.read_results.outputs.contents == 'success' && steps.prettier_check.outputs.prettier_output == 'success'
         run: echo "Looks like you've passed all of the checks!" >> message.txt
