--- a/.github/workflows/fps-submissions-checks.yml
+++ b/.github/workflows/fps-submissions-checks.yml
@@ -41,14 +41,17 @@ jobs:
         continue-on-error: true
         shell: bash
         run: |
-         prettier_output=$(prettier "**/first_party_sets.JSON" --check)
+         echo "prettier_output=$(prettier "**/first_party_sets.JSON" --check | grep -v "Checking formatting...")" >> $GITHUB_OUTPUT
+
+        
+        # prettier_output=$(prettier "**/first_party_sets.JSON" --check)
          # Print for visibility 
-         echo "prettier output:"
-         echo $prettier_output"
+         #echo "prettier output:"
+         #echo $prettier_output"
          # Get files that need to be formatted
-         files_to_reformat=$(echo "$prettier_output" | grep -v "Checking formatting...")
+         #files_to_reformat=$(echo "$prettier_output" | grep -v "Checking formatting...")
          # store in output file
-         echo "prettier_output=$files_to_reformat" >> $GITHUB_OUTPUT
+         #echo "prettier_output=$files_to_reformat" >> $GITHUB_OUTPUT
 
 
         # Store output in GITHUB_OUTPUT 
