--- a/.github/workflows/fps-submissions-checks.yml
+++ b/.github/workflows/fps-submissions-checks.yml
@@ -41,7 +41,7 @@ jobs:
         continue-on-error: true
         shell: bash
         run: |
-         output=$(prettier "**/first_party_sets.JSON" --check)
+         echo "prettier_output=$(prettier "**/first_party_sets.JSON" --check)" >> $GITHUB_OUTPUT
          exit_code=$?  # Store the exit code for eval
          if [[ $exit_code -ne 0 ]]; then
          echo "Command failed, output: $output"
