--- a/.github/workflows/fps-submissions-checks.yml
+++ b/.github/workflows/fps-submissions-checks.yml
@@ -41,7 +41,7 @@ jobs:
         continue-on-error: true
         shell: bash
         run: |
-         echo "prettier_output=$(prettier "**/first_party_sets.JSON" --check)" >> $GITHUB_OUTPUT
+         echo "prettier_output=$(prettier "**/first_party_sets.JSON" --check --verbose)" >> $GITHUB_OUTPUT
          exit_code=$?  # Store the exit code for eval
          if [[ $exit_code -ne 0 ]]; then
          echo "Command failed, output: $output"
@@ -136,4 +136,4 @@ jobs:
         uses: actions/github-script@v3
         with:
           script: |
-            core.setFailed('This run has failed. Check `File Contents` to see why.')
+            core.setFailed('This run has failed. Check `File Contents` or 'Run prettier check' to see why.')
