--- a/.github/workflows/fps-submissions-checks.yml
+++ b/.github/workflows/fps-submissions-checks.yml
@@ -41,11 +41,13 @@ jobs:
         continue-on-error: true
         shell: bash
         run: |
-         echo "prettier_output=$(prettier "**/first_party_sets.JSON" --check --verbose)" >> $GITHUB_OUTPUT
+         echo "prettier_output=$(prettier "**/first_party_sets.JSON" --debug-check)" >> $GITHUB_OUTPUT
          exit_code=$?  # Store the exit code for eval
          if [[ $exit_code -ne 0 ]]; then
+         echo "Command failed, output: $steps.prettier_check.outputs.prettier_output"
+         echo "prettier_output=$output" >> $GITHUB_OUTPUT
+         else
          echo "Command failed, output: $output"
-         echo "prettier_output=$output" >> $GITHUB_OUTPUT 
          fi
 
         
