--- a/.github/workflows/fps-submissions-checks.yml
+++ b/.github/workflows/fps-submissions-checks.yml
@@ -44,10 +44,9 @@ jobs:
          echo "prettier_output=$(prettier "**/first_party_sets.JSON" --debug-check)" >> $GITHUB_OUTPUT
          exit_code=$?  # Store the exit code for eval
          if [[ $exit_code -ne 0 ]]; then
-         echo "Command failed, output: $steps.prettier_check.outputs.prettier_output"
-         echo "prettier_output=$output" >> $GITHUB_OUTPUT
+          echo "Prettier check failed"
          else
-         echo "Command failed, output: $output"
+          echo "prettier_output=success" >> $GITHUB_OUTPUT
          fi
 
         
