--- a/.github/workflows/fps-submissions-checks.yml
+++ b/.github/workflows/fps-submissions-checks.yml
@@ -41,7 +41,7 @@ jobs:
         continue-on-error: true
         shell: bash
         run: |
-         echo "prettier_output=$(prettier "**/first_party_sets.JSON" --debug-check)" >> $GITHUB_OUTPUT
+         echo "prettier_output=$(prettier --debug-check "**/first_party_sets.JSON")" >> $GITHUB_OUTPUT
          exit_code=$?  # Store the exit code for eval
          if [[ $exit_code -ne 0 ]]; then
           echo "Prettier check failed"
